Added functionality for static blog

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 	<head>
 		<title>Robben Migacz</title>
 		<meta charset = "utf-8" />
+		<meta name = "description" content = "Website of Robben Migacz" />
+		<link rel = "canonical" href = "http://migacz.me" />
 	</head>
 	<body>
-		<p>Hello, there!</p>
+		<p>Hello there!</p>
 	</body>
 </html>
