--- a/index.html
+++ b/index.html
@@ -5,8 +5,29 @@
 		<meta charset = "utf-8" />
 		<meta name = "description" content = "Website of Robben Migacz" />
 		<link rel = "canonical" href = "http://migacz.me" />
+		<style>
+			html, body {
+				width: 100%;
+				height: 100%;
+				margin: 0;
+				padding: 0;
+			}
+			table, tr, td {
+				border-collapse: collapse;
+				width: 100%;
+				height: 100%;
+				text-align: center;
+				vertical-align: middle;
+			}
+		</style>
 	</head>
 	<body>
-		<p>Hello there!</p>
+		<table>
+			<tr>
+				<td>
+					<img id = "center" src = "development.png">
+				</td>
+			</tr>
+		</table>
 	</body>
 </html>
